[package]
name = "unical"
version = "0.1.0"
edition = "2021"
authors = ["chmod77 <shalom.nyende@gmail.com>"]
description = "A unified Rust crate for retrieving and interacting with public holidays in various countries"
license = "MIT"
repository = "https://github.com/chmod77/unical"
homepage = "https://github.com/chmod77/unical"
readme = "README.md"
keywords = ["calendarific", "unical", "public-holidays", "calendar", "holidays"]


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
